--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
     </section>
 
     <section class="swiper-section">
+      <div class="glow"></div>
+
       <div class="container">
         <div class="row">
           <div class="swiper-container">
@@ -411,7 +413,7 @@
     var owl = $('.owl-carousel');
     owl.owlCarousel({
       margin: 40,
-      nav: true,
+      nav: false,
       loop: true,
       responsive: {
         0: {
